--- a/practices/.project
+++ b/practices/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>kjlkjlk</name>
+	<name>practices</name>
 	<comment></comment>
 	<projects>
 	</projects>
